добавила папку блоки

--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -172,7 +172,7 @@ button,
 [type=button],
 [type=reset],
 [type=submit] {
-  --webkit-appearance: button;
+  -webkit-appearance: button;
 }
 
 /**
@@ -255,7 +255,7 @@ textarea {
  * 2. Correct the outline style in Safari.
  */
 [type=search] {
-  --webkit-appearance: textfield; /* 1 */
+  -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
 
