--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -1,1 +1,7 @@
-@import "../vendor/normalize.scss"
+@import "../vendor/normalize.scss";
+@import "../scss/blocks/button_fontsize.scss";
+@import "../scss/blocks/galleryText_size.scss";
+@import "../scss/blocks/subtitle_size.scss";
+@import "../scss/blocks/tittle_size.scss";
+@import "../scss/blocks/gallery/gallery.scss";
+@import "../scss/blocks/heroesBox/heroesBox.scss";
