--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -307,4 +307,60 @@ template {
   display: none;
 }
 
+.button_fontsize {
+  font-size: 26px;
+  font-weight: bold;
+}
+
+.galleryText_size {
+  font-size: 25px;
+}
+
+.subtittle_size {
+  font-size: 28px;
+}
+
+.tittle_size {
+  font-size: 36px;
+}
+
+.gallery {
+  border-top: 1px solid white;
+  background: url("../../images/mainpage/flash.svg") 0% 0% no-repeat fixed, url("../../images/mainpage/flash.svg") 50% 23% no-repeat fixed, url("../../images/mainpage/flash.svg") 112% 15.5% no-repeat fixed, url("../../images/mainpage/flash.svg") 24% 72.2% no-repeat fixed, url("../../images/mainpage/flash.svg") 69% 70% no-repeat fixed, url("../../images/mainpage/gray.svg") 30% 66% no-repeat fixed;
+  background-size: 30%, 18%, 22%, 6.5%, 10%, 100%;
+}
+
+.heroesBox__btn_left {
+  background: url("../../images/mainpage/arrayLeft.svg") no-repeat;
+}
+
+.heroesBox__btn_right {
+  background: url("../../images/mainpage/arrayRight.svg") no-repeat;
+}
+
+.heroesBox__btn {
+  height: 3em;
+  width: 3em;
+  margin-top: 8em;
+  border: none;
+}
+
+.heroesBox__card {
+  display: flex;
+  flex-direction: column;
+  width: 13em;
+  margin: auto 0 auto 0;
+  text-align: center;
+}
+
+.heroesBox {
+  margin-top: 4em;
+  display: flex;
+  flex-direction: row;
+  height: 70vh;
+  justify-content: space-around;
+  padding: 7em;
+  box-sizing: border-box;
+}
+
 /*# sourceMappingURL=style.css.map */
