--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -5,3 +5,4 @@
 @import "../scss/blocks/tittle_size.scss";
 @import "../scss/blocks/gallery/gallery.scss";
 @import "../scss/blocks/heroesBox/heroesBox.scss";
+@import "../scss/blocks/heroesBox/heroesBox2.scss";
