--- a/assets/styles/scss/blocks/heroesBox/heroesBox.scss
+++ b/assets/styles/scss/blocks/heroesBox/heroesBox.scss
@@ -1,12 +1,9 @@
 @import "./__btn/heroesBox__btn.scss";
 @import "./__card/heroesBox__card.scss";
+@import "./__title/heroesBox__title.scss";
 
 .heroesBox {
-    margin-top: 4em;
-    display: flex;
-    flex-direction: row;
-    height: 70vh;
-    justify-content: space-around;
+    height: 80vh;
     padding: 7em;
     box-sizing: border-box;
 
