--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -6,3 +6,4 @@
 @import "../scss/blocks/gallery/gallery.scss";
 @import "../scss/blocks/heroesBox/heroesBox.scss";
 @import "../scss/blocks/heroesBox/heroesBox2.scss";
+@import "../scss/blocks/comments/comments.scss";
