--- a/assets/styles/scss/blocks/heroesBox/heroesBox.scss
+++ b/assets/styles/scss/blocks/heroesBox/heroesBox.scss
@@ -1,6 +1,7 @@
 @import "./__btn/heroesBox__btn.scss";
 @import "./__card/heroesBox__card.scss";
 @import "./__title/heroesBox__title.scss";
+@import "./__card/imgHover.scss";
 
 .heroesBox {
     height: 80vh;
