--- a/assets/styles/scss/blocks/heroesBox/__btn/heroesBox__btn.scss
+++ b/assets/styles/scss/blocks/heroesBox/__btn/heroesBox__btn.scss
@@ -2,8 +2,9 @@
 @import "./_right/heroesBox__btn_right.scss";
 
 .heroesBox__btn {
-    height: 3em;
-    width: 3em;
+    height: 2.5em;
+    width: 2.5em;
     margin-top: 8em;
     border: none;
+    border-radius: 100%;
 }
