--- a/assets/styles/scss/blocks/comments/comments.scss
+++ b/assets/styles/scss/blocks/comments/comments.scss
@@ -1,3 +1,5 @@
+@import "./__block/_block";
+@import "./input/_input";
 .comments {
     background: linear-gradient(0deg, #1D1D1F, #1D1D1F), linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(0, 0, 0, 0.2);
 }
