--- a/assets/styles/scss/blocks/comments/comments.scss
+++ b/assets/styles/scss/blocks/comments/comments.scss
@@ -1,6 +1,7 @@
 @import "./commentsBox/commentsBox.scss";
 @import "./__block/_block";
 @import "./__form/_form";
+@import "./__button/_button";
 .comments {
     background: #1D1D1F;
 }
