--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -455,6 +455,19 @@ template {
   padding-bottom: 5em;
 }
 
+.comments__button {
+  width: 239px;
+  height: 68px;
+  background: #DE9E15;
+  border-radius: 20px;
+  color: white;
+  font-size: 26px;
+}
+
+.comments__button:hover {
+  opacity: 0.8;
+}
+
 .comments {
   background: #1D1D1F;
 }
