--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -7,3 +7,4 @@
 @import "../scss/blocks/heroesBox/heroesBox.scss";
 @import "../scss/blocks/heroesBox/heroesBox2.scss";
 @import "../scss/blocks/comments/comments.scss";
+@import "../scss/blocks/mainpage/mainpage.scss";
