--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -8,3 +8,4 @@
 @import "../scss/blocks/heroesBox/heroesBox2.scss";
 @import "../scss/blocks/comments/comments.scss";
 @import "../scss/blocks/mainpage/mainpage.scss";
+@import "../scss/blocks/header/header.scss";
