--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -9,3 +9,4 @@
 @import "../scss/blocks/comments/comments.scss";
 @import "../scss/blocks/mainpage/mainpage.scss";
 @import "../scss/blocks/header/header.scss";
+@import "../scss/blocks/footer/footer.scss";
