--- a/assets/styles/scss/blocks/header/__link/header__link.scss
+++ b/assets/styles/scss/blocks/header/__link/header__link.scss
@@ -1,5 +1,5 @@
 .header__link {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     text-decoration: none;
     margin-right: 70px;
     font-weight: 500;
