--- a/assets/styles/scss/blocks/header/__login/header__login.scss
+++ b/assets/styles/scss/blocks/header/__login/header__login.scss
@@ -1,5 +1,5 @@
 .header__login a{
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     text-decoration: none;
     font-weight: 500;
     font-size: 19px;
