--- a/assets/styles/scss/blocks/comments/comments.scss
+++ b/assets/styles/scss/blocks/comments/comments.scss
@@ -2,6 +2,7 @@
 @import "./__block/_block";
 @import "./__form/_form";
 @import "./__button/_button";
+@import "./__result/_result";
 .comments {
     background: #1D1D1F;
 }
@@ -16,5 +17,5 @@
     height: 7rem;
     background-color: white;
     border-radius: 27px;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
