добавила фотов  комментарии

--- a/assets/styles/scss/blocks/comments/__result/__result.scss
+++ b/assets/styles/scss/blocks/comments/__result/__result.scss
@@ -10,3 +10,10 @@
     border-radius: 27px;
     margin-bottom: 5px;
 }
+
+.comments__photo {
+    display: block;
+    position: relative;
+    margin-top: 1rem;
+    margin-left: 1rem;
+}
