--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -10,3 +10,4 @@
 @import "../scss/blocks/mainpage/mainpage.scss";
 @import "../scss/blocks/header/header.scss";
 @import "../scss/blocks/footer/footer.scss";
+@import "../scss/blocks/spells/spells.scss";
