--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -657,4 +657,75 @@ template {
   flex-direction: column;
 }
 
+.spellsGallery_wrapper {
+  padding-top: 110px;
+  padding-left: 6vw;
+  padding-right: 6vw;
+  display: block;
+  margin-bottom: 155px;
+}
+
+.h2 {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 38px;
+  margin-bottom: 55px;
+}
+
+.spellsGallery_wrapper_cards {
+  display: flex;
+  align-items: center;
+}
+
+.spellCard_picture {
+  width: 100%;
+}
+
+.spellCard_picture:hover {
+  box-shadow: 1px 3px 7px 2px rgba(0, 0, 0, 0.5);
+}
+
+.spellCard {
+  margin-left: 7px;
+  margin-right: 7px;
+  display: grid;
+  justify-items: center;
+}
+
+.spells_icon_left {
+  margin-right: 55px;
+}
+
+.spells_icon_right {
+  margin-left: 55px;
+}
+
+.spellCard_text {
+  font-family: "Playfair Display";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 33px;
+  margin-top: 17px;
+}
+
+a {
+  color: #000000; /* Цвет обычной ссылки */
+  text-decoration: none; /* Убираем подчёркивание у ссылок */
+}
+
+a:hover {
+  color: #DE9E15; /* Цвет ссылки при наведении */
+  text-decoration: none; /* Добавляем подчёркивание */
+}
+
+.spellsGallery_magicStick {
+  position: absolute;
+  width: 55%;
+  margin-left: 45%;
+  margin-top: -130px;
+}
+
 /*# sourceMappingURL=style.css.map */
