--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -2,8 +2,7 @@
 @import "../scss/blocks/button_fontsize.scss";
 @import "../scss/blocks/galleryText_size.scss";
 @import "../scss/blocks/subtitle_size.scss";
-@import "../scss/blocks/tittle_size.scss";
-@import "../scss/blocks/gallery/gallery.scss";
+@import "../scss/blocks/title_size.scss";
 @import "../scss/blocks/heroesBox/heroesBox.scss";
 @import "../scss/blocks/heroesBox/heroesBox2.scss";
 @import "../scss/blocks/comments/comments.scss";
