--- a/assets/styles/scss/blocks/galleryText_size.scss
+++ b/assets/styles/scss/blocks/galleryText_size.scss
@@ -1,7 +1,13 @@
 .galleryText_size {
     font-size: 1.89vw;
+    font-family: 'Playfair Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 33px;
 }
 
 .galleryText_size:hover {
-    color: rgb(48, 48, 48);
+    color: #DE9E15;
+    text-decoration: none;
 }
