--- a/assets/styles/scss/blocks/heroesBox/heroesBox.scss
+++ b/assets/styles/scss/blocks/heroesBox/heroesBox.scss
@@ -4,8 +4,8 @@
 @import "./__card/imgHover.scss";
 
 .heroesBox {
-    height: 80vh;
+    height: 90vh;
     padding: 7em;
     box-sizing: border-box;
-
+    background-image: url('../../images/mainpage/фон.png');
 }
