--- a/assets/styles/scss/blocks/comments/__result/__result.scss
+++ b/assets/styles/scss/blocks/comments/__result/__result.scss
@@ -7,6 +7,7 @@
     width: 38rem;
     height: 7rem;
     background-color: white;
+    opacity: 0.8;
     border-radius: 27px;
     margin-bottom: 5px;
 }
