--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -1,4 +1,5 @@
 @import "../vendor/normalize.scss";
+@import "../scss/blocks/button__shine.scss";
 @import "../scss/blocks/button_fontsize.scss";
 @import "../scss/blocks/galleryText_size.scss";
 @import "../scss/blocks/subtitle_size.scss";
