--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -308,6 +308,30 @@ template {
   display: none;
 }
 
+.button__shine {
+  position: relative;
+  overflow: hidden;
+}
+
+.button__shine:hover {
+  box-shadow: 1px 1px 20px 7px rgba(222, 158, 21, 0.4);
+}
+
+.button__shine::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(120deg, transparent, rgba(255, 255, 255, 0.4), transparent);
+  transition: all 650ms;
+}
+
+.button__shine:hover::before {
+  left: 100%;
+}
+
 .button_fontsize {
   font-size: 1.97vw;
   font-weight: 400;
