--- a/assets/styles/scss/blocks/button__shine.scss
+++ b/assets/styles/scss/blocks/button__shine.scss
@@ -5,6 +5,7 @@
     .button__shine:hover{
       box-shadow: 1px 1px 20px 7px
       rgba(222, 158, 21, 0.4);
+      cursor:pointer;
     }
     .button__shine::before{
       content:"";
