--- a/assets/styles/scss/blocks/comments/comments.scss
+++ b/assets/styles/scss/blocks/comments/comments.scss
@@ -4,7 +4,9 @@
 @import "./__button/_button";
 @import "./__result/_result";
 .comments {
-    background: #1D1D1F;
+    background-image: url('../../images/mainpage/hat.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 .comments__result {
