--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -436,9 +436,9 @@ template {
 
 .form-control {
   box-sizing: border-box;
-  background: black;
+  background: 0%;
   border: 4px solid white;
-  width: 27rem;
+  width: 28rem;
   color: rgba(255, 255, 255, 0.49);
   font-size: 20px;
   padding-left: 2rem;
