анимация на слайдере

--- a/assets/styles/scss/blocks/heroesBox/__btn/heroesBox__btn.scss
+++ b/assets/styles/scss/blocks/heroesBox/__btn/heroesBox__btn.scss
@@ -7,4 +7,10 @@
     margin-top: 8em;
     border: none;
     border-radius: 100%;
+    transition: 0.5s;
+}
+
+.heroesBox__btn:hover {
+
+    transform: scale(1.09);
 }
