--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -387,6 +387,11 @@ template {
   margin-top: 8em;
   border: none;
   border-radius: 100%;
+  transition: 0.5s;
+}
+
+.heroesBox__btn:hover {
+  transform: scale(1.09);
 }
 
 .heroesBox__card {
@@ -406,6 +411,11 @@ template {
 
 .imgHover:hover {
   box-shadow: 1px 3px 7px 2px rgba(0, 0, 0, 0.5);
+  transform: scale(1.02);
+}
+
+.imgHover {
+  transition: 1s;
 }
 
 .heroesBox {
