--- a/assets/styles/scss/blocks/heroesBox/__card/imgHover.scss
+++ b/assets/styles/scss/blocks/heroesBox/__card/imgHover.scss
@@ -1,4 +1,8 @@
 .imgHover:hover {
     box-shadow: 1px 3px 7px 2px rgba(0, 0, 0, 0.5);
+    transform: scale(1.02);
+}
 
+.imgHover {
+    transition: 1s;
 }
