--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -11,3 +11,4 @@
 @import "../scss/blocks/header/header.scss";
 @import "../scss/blocks/footer/footer.scss";
 @import "../scss/blocks/spells/spells.scss";
+@import "../scss/blocks/padding.scss";
