--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -754,4 +754,9 @@ a:hover {
   margin-top: -130px;
 }
 
+.padding {
+  padding-left: 6vw;
+  padding-right: 6vw;
+}
+
 /*# sourceMappingURL=style.css.map */
