--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -12,3 +12,4 @@
 @import "../scss/blocks/footer/footer.scss";
 @import "../scss/blocks/spells/spells.scss";
 @import "../scss/blocks/padding.scss";
+@import "../scss/modal.scss";
