--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -1,3 +1,4 @@
+@import "../scss/blocks/slick/slick.scss";
 @import "../vendor/normalize.scss";
 @import "../scss/blocks/button__shine.scss";
 @import "../scss/blocks/button_fontsize.scss";
