--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1,4 +1,42 @@
 @charset "UTF-8";
+.slick-track {
+  display: flex;
+}
+
+.slick-list {
+  overflow: hidden;
+}
+
+.slider {
+  position: relative;
+  padding: 0 10em;
+}
+
+.slider .slick-arrow {
+  position: absolute;
+  top: 35%;
+  z-index: 10;
+  font-size: 0;
+  width: 40px;
+  height: 40px;
+  border: none;
+}
+
+.slick-prev {
+  left: 0;
+  background: url("../../images/mainpage/arrayRight.svg") 0 0/100% no-repeat;
+}
+
+.slick-next {
+  right: 0;
+  background: url("../../images/mainpage/arrayLeft.svg") 0 0/100% no-repeat;
+}
+
+.slider__item {
+  text-align: center;
+  max-width: 100%;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -395,11 +433,10 @@ template {
 }
 
 .heroesBox__card {
-  display: flex;
-  flex-direction: column;
   max-width: 13em;
   margin: auto 0 auto 0;
   text-align: center;
+  min-width: 0;
 }
 
 .heroesBox__title {
@@ -416,10 +453,11 @@ template {
 
 .imgHover {
   transition: 1s;
+  max-width: 13em;
 }
 
 .heroesBox {
-  height: 90vh;
+  height: 85vh;
   padding: 7em;
   box-sizing: border-box;
   background-image: url("../../images/mainpage/фон.png");
