--- a/assets/styles/scss/blocks/galleryText_size.scss
+++ b/assets/styles/scss/blocks/galleryText_size.scss
@@ -1,10 +1,22 @@
 .galleryText_size {
-    font-size: 1.89vw;
+
     font-family: 'Playfair Display';
     font-style: normal;
     font-weight: 400;
     font-size: 25px;
     line-height: 33px;
+
+}
+
+
+.galleryText_sizeHover {
+
+    font-family: 'Playfair Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 33px;
+
 }
 
 .galleryText_size:hover {
