--- a/assets/styles/scss/blocks/mainpage/mainpage.scss
+++ b/assets/styles/scss/blocks/mainpage/mainpage.scss
@@ -4,12 +4,13 @@
 @import "./__container/__search/mainpage__container__search.scss";
 @import "./__container/__text1/mainpage__container__text1.scss";
 @import "./__container/__text2/mainpage__container__text2.scss";
-.mainpage{
-    width: 100%;
-    height: 100vh;
-    background-image: url('../../images/mainpage/fon_mainpage.png');
-    background-size: 100%;
-    background-repeat: no-repeat;
-    font-family: 'Roboto', sans-serif;
-  }
-  
+
+.mainpage {
+  width: 100%;
+  height: 100vh;
+  background-image: url('../../images/mainpage/fon_mainpage.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
+  font-family: 'Roboto', sans-serif;
+  display: none;
+}
