--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -14,3 +14,4 @@
 @import "../scss/blocks/spells/spells.scss";
 @import "../scss/blocks/padding.scss";
 @import "../scss/modal.scss";
+@import "../scss/blocks/tooltrip.scss";
