--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -605,15 +605,25 @@ template {
   height: 100%;
   grid-template-columns: 100%;
   grid-template-rows: 25% 12% 12% 10%;
+  align-items: center;
+}
+
+.mainpage__container2 {
+  width: 80%;
+  display: grid;
+  grid-template-columns: 75% 25%;
+  grid-template-rows: 100%;
 }
 
 .mainpage__container__button {
-  width: 20%;
-  height: 60%;
+  margin-left: 3%;
+  width: 100%;
+  height: 100%;
   background-color: #DE9E15;
   border-width: 0;
   border-radius: 24px;
   color: white;
+  align-self: center;
 }
 
 .mainpage__container__input {
@@ -628,9 +638,8 @@ template {
 }
 
 .mainpage__container__search {
-  width: 50%;
-  height: 30%;
-  margin-left: 5%;
+  width: 90%;
+  height: 50%;
   display: inline-flex;
   border: 1px solid white;
   border-radius: 30px;
