--- a/assets/styles/scss/blocks/mainpage/__container/__button/mainpage__container__button.scss
+++ b/assets/styles/scss/blocks/mainpage/__container/__button/mainpage__container__button.scss
@@ -1,10 +1,10 @@
 .mainpage__container__button{
-  
-    width: 20%;
-    height: 60%;
+    margin-left: 3%;
+    width: 100%;
+    height: 100%;
     background-color: #DE9E15;
     border-width: 0;
     border-radius: 24px;
     color:white;
-    
+    align-self: center;
   }
