--- a/assets/styles/scss/blocks/header/__container/header__container.scss
+++ b/assets/styles/scss/blocks/header/__container/header__container.scss
@@ -2,5 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1em 7em;
+    padding-top: 1em;
+    padding-left: 6vw;
+    padding-right: 6vw;
 }
