--- a/assets/styles/scss/blocks/spells/spells.scss
+++ b/assets/styles/scss/blocks/spells/spells.scss
@@ -1,5 +1,12 @@
+.spellsGallery{
+  width: 100%;
+  height: 100%;
+  background-image: url('../..//images/spells/fon.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
 .spellsGallery_wrapper{
-    padding-top: 110px;
+    padding-top: 9vh;
     padding-left: 6vw;
     padding-right: 6vw;
     display: block;
@@ -11,8 +18,6 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 600;
-    font-size: 32px;
-    line-height: 38px;
     margin-bottom: 55px;
   }
   
@@ -59,9 +64,3 @@
     text-decoration: none; /* Добавляем подчёркивание */
   }
   
-  .spellsGallery_magicStick{
-    position: absolute;
-    width: 55%;
-    margin-left: 45%;
-    margin-top: -130px;
-  }
