--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1,15 +1,17 @@
 @charset "UTF-8";
 .slick-track {
   display: flex;
+  height: 20em;
 }
 
 .slick-list {
   overflow: hidden;
+  margin: auto;
 }
 
 .slider {
   position: relative;
-  padding: 0 6em;
+  padding: 0 8%;
 }
 
 .slider .slick-arrow {
@@ -26,7 +28,7 @@
 }
 
 .slick-prev {
-  left: 0;
+  left: -1%;
   background: url("../../images/mainpage/arrayRight.svg") 0 0/100% no-repeat;
 }
 
@@ -35,7 +37,7 @@
 }
 
 .slick-next {
-  right: 0;
+  right: -1%;
   background: url("../../images/mainpage/arrayLeft.svg") 0 0/100% no-repeat;
 }
 
@@ -46,6 +48,31 @@
 .slider__item {
   text-align: center;
   max-width: 100%;
+}
+
+.slick-dots {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+.slick-dots li[class=slick-active] button {
+  height: 12px;
+  width: 12px;
+}
+
+.slick-dots li button {
+  font-size: 0;
+  line-height: 0;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: none;
+  background-color: #c4c4c4;
+  padding: 0;
+  margin: 3px;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -922,7 +949,7 @@ a:hover {
   display: none;
   top: 0px;
   left: 0px;
-  width: 90px;
+  width: 110px;
   background-color: rgb(0, 0, 0);
   padding: 5px 10px 5px 10px;
   color: #DE9E15;
