--- a/assets/styles/scss/blocks/slick/slick.scss
+++ b/assets/styles/scss/blocks/slick/slick.scss
@@ -1,14 +1,16 @@
 .slick-track {
     display: flex;
+    height: 20em;
 }
 
 .slick-list {
     overflow: hidden;
+    margin: auto;
 }
 
 .slider {
     position: relative;
-    padding: 0 6em;
+    padding: 0 8%;
 
 
 }
@@ -28,7 +30,7 @@
 
 .slick-prev {
 
-    left: 0;
+    left: -1%;
     background: url('../../images/mainpage/arrayRight.svg')0 0 /100% no-repeat;
 }
 
@@ -38,7 +40,7 @@
 }
 
 .slick-next {
-    right: 0;
+    right: -1%;
     background: url('../../images/mainpage/arrayLeft.svg')0 0 /100% no-repeat;
 }
 
@@ -50,4 +52,34 @@
     text-align: center;
     max-width: 100%;
 
+}
+
+.slick-dots {
+    text-align: center;
+    display: flex; // поставить кнопки в ряд
+    justify-content: center; // выровнять по центру
+    list-style: none;
+
+
+}
+
+
+
+.slick-dots li[class="slick-active"] button {
+    height: 12px; // высота точки
+    width: 12px;
+}
+
+.slick-dots li button {
+    font-size: 0;
+    line-height: 0;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: transparent;
+
+    border: none;
+    background-color: #c4c4c4;
+    padding: 0;
+    margin: 3px;
 }
