--- a/assets/styles/scss/blocks/comments/__block/__block.scss
+++ b/assets/styles/scss/blocks/comments/__block/__block.scss
@@ -1,6 +1,6 @@
     .comments__block {
         box-sizing: border-box;
-        padding: 4em 0;
+        padding: 4em 0 3em 0;
         display: flex;
         justify-content: space-between;
     }
