--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -47,7 +47,6 @@
 
 .slider__item {
   text-align: center;
-  max-width: 100%;
 }
 
 .slick-dots {
@@ -73,6 +72,10 @@
   background-color: #c4c4c4;
   padding: 0;
   margin: 3px;
+}
+
+.slick-slide img {
+  display: block;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
