--- a/assets/styles/scss/blocks/slick/slick.scss
+++ b/assets/styles/scss/blocks/slick/slick.scss
@@ -50,7 +50,7 @@
 
 .slider__item {
     text-align: center;
-    max-width: 100%;
+
 
 }
 
@@ -80,4 +80,9 @@
     background-color: #c4c4c4;
     padding: 0;
     margin: 3px;
+}
+
+.slick-slide img {
+    display: block;
+
 }
