--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -74,10 +74,6 @@
   margin: 3px;
 }
 
-.slick-slide img {
-  display: block;
-}
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -570,12 +566,13 @@ template {
 }
 
 .comments__button {
-  width: 239px;
-  height: 68px;
+  width: 210px;
+  height: 59px;
   background: #DE9E15;
   border-radius: 20px;
   color: white;
   font-size: 26px;
+  border: none;
 }
 
 .comments__result {
@@ -653,6 +650,24 @@ template {
   border-radius: 24px;
   color: white;
   align-self: center;
+}
+
+input:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+
+input:focus:-moz-placeholder {
+  color: transparent;
+}
+
+/* FF 4-18 */
+input:focus::-moz-placeholder {
+  color: transparent;
+}
+
+/* FF 19+ */
+input:focus:-ms-input-placeholder {
+  color: transparent;
 }
 
 .mainpage__container__input {
@@ -964,148 +979,3 @@ a:hover {
 }
 
 /*# sourceMappingURL=style.css.map */
-
-/* форма авторизации и регистрации */
-
-.loginForm, .registrationForm{
-  display: flex;
-  justify-content: center;
-}
-
-.loginForm_template, .registration_template{
-  background-color: #1D1D1F;
-  width: 507px;
-  border-radius: 31px;
-}
-
-.loginForm_template {
-  height: 685px;
-}
-
-.registration_template{
-  height: 960px;
-}
-
-.loginForm_template_pic, .registration_template_pic{
-  display: flex;
-}
-
-.loginForm_template_pic_Harry, .registration_template_pic_Harry{
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 24px;
-}
-
-.loginForm_welcome_text, .registration_welcome_text{
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 20px;
-color: #FFFFFF;
-text-align: center;
-}
-
-.nameColor{
-  color: #DE9E15;
-}
-
-.loginForm_template_fieldset, .registration_template_fieldset{
-  display: grid;
-  justify-items: center;
-}
-.emailBlock, .passwordBlock, .loginBlock, .heroBlock{
-  display: grid;
-  justify-items: left;
-  margin-bottom: 24px;
-  width: 422px;
-}
-
-.email, .password, .login, .selectHero{
-  border-radius: 8px;
-  width: 406px;
-  height: 56px;
-  font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
-color: #1F2832;
-padding-left: 16px;
-border-style: solid;
-  border: none;
-}
-
-.emailLabel, .passwordLabel, .loginLabel, .heroLabel{
-  color: #fff;
-  font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-margin-bottom: 8px;
-}
-
-.restorePass_Link{
-  text-align: right;
-text-decoration-line: underline;
-color: #FFFFFF;
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-}
-
-.rememberText{
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 100%;
-color: #FFFFFF;
-}
-
-.checkboxBlock{
-  display: flex;
-  grid-template-columns: 1fr 1fr;
-  width: 422px;
-  justify-content: space-between;
-}
-
-.loginForm_Buttons, .registration_Buttons{
-  display: flex;
-  justify-content: space-between;
-  width: 422px;
-}
-.loginButton, .signUpButton{
-  width: 193px;
-  height: 51px;
-  border-radius: 8px;
-  padding: 0px;
-  margin-top: 41px;
-  color: #fff;
-}
-.signUpButton{
-background-color: #DE9E15;
-border-style: solid;
-border: none;
-}
-.loginButton{
-border: 1px solid white;
-background-color: rgba(28,28,28,0);
-}
-
-.signUpButton_registration{
-  width: 422px;
-  height: 51px;
-  border-radius: 8px;
-  padding: 0px;
-  margin-top: 23px;
-  color: #fff;
-  background-color: #DE9E15;
-  border-style: solid;
-  border: none;
-}
-
-.checkLogin{
-  justify-content: flex-end;
-}
-
-/* форма авторизации и регистрации */
