--- a/assets/styles/scss/blocks/comments/__button/__button.scss
+++ b/assets/styles/scss/blocks/comments/__button/__button.scss
@@ -1,8 +1,9 @@
 .comments__button {
-    width: 239px;
-    height: 68px;
+    width: 210px;
+    height: 59px;
     background: #DE9E15;
     border-radius: 20px;
     color: white;
     font-size: 26px;
+    border: none;
 }
