перенесла стили из head

--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -15,3 +15,6 @@
 @import "../scss/blocks/padding.scss";
 @import "../scss/modal.scss";
 @import "../scss/blocks/tooltrip.scss";
+@import "../scss/blocks/form/form.scss";
+@import "../scss/blocks/button/button.scss";
+@import "../scss/blocks/hero+spell/hero+spell.scss";
