--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -978,4 +978,286 @@ a:hover {
   font-size: 20px;
 }
 
+.loginForm,
+.registrationForm {
+  display: flex;
+  justify-content: center;
+}
+
+.loginForm_template,
+.registration_template {
+  background-color: #1D1D1F;
+  width: 507px;
+  border-radius: 31px;
+}
+
+.loginForm_template {
+  height: 685px;
+}
+
+.registration_template {
+  height: 960px;
+}
+
+.loginForm_template_pic,
+.registration_template_pic {
+  display: flex;
+}
+
+.loginForm_template_pic_Harry,
+.registration_template_pic_Harry {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 24px;
+}
+
+.loginForm_welcome_text,
+.registration_welcome_text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  color: #FFFFFF;
+  text-align: center;
+}
+
+.nameColor {
+  color: #DE9E15;
+}
+
+.loginForm_template_fieldset,
+.registration_template_fieldset {
+  display: grid;
+  justify-items: center;
+}
+
+.emailBlock,
+.passwordBlock,
+.loginBlock,
+.heroBlock {
+  display: grid;
+  justify-items: left;
+  margin-bottom: 24px;
+  width: 422px;
+}
+
+.email,
+.password,
+.login,
+.selectHero {
+  border-radius: 8px;
+  width: 406px;
+  height: 56px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #1F2832;
+  padding-left: 16px;
+  border-style: solid;
+  border: none;
+}
+
+.emailLabel,
+.passwordLabel,
+.loginLabel,
+.heroLabel {
+  color: #fff;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  margin-bottom: 8px;
+}
+
+.restorePass_Link {
+  text-align: right;
+  text-decoration-line: underline;
+  color: #FFFFFF;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.rememberText {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  color: #FFFFFF;
+}
+
+.checkboxBlock {
+  display: flex;
+  grid-template-columns: 1fr 1fr;
+  width: 422px;
+  justify-content: space-between;
+}
+
+.loginForm_Buttons,
+.registration_Buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 422px;
+}
+
+.loginButton,
+.signUpButton {
+  width: 193px;
+  height: 51px;
+  border-radius: 8px;
+  padding: 0px;
+  margin-top: 41px;
+  color: #fff;
+}
+
+.signUpButton {
+  background-color: #DE9E15;
+  border-style: solid;
+  border: none;
+}
+
+.loginButton {
+  border: 1px solid white;
+  background-color: rgba(28, 28, 28, 0);
+}
+
+.signUpButton_registration {
+  width: 422px;
+  height: 51px;
+  border-radius: 8px;
+  padding: 0px;
+  margin-top: 23px;
+  color: #fff;
+  background-color: #DE9E15;
+  border-style: solid;
+  border: none;
+}
+
+.checkLogin {
+  justify-content: flex-end;
+}
+
+.button {
+  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.3);
+  display: inline-block;
+  vertical-align: middle;
+  box-sizing: border-box;
+  background-color: transparent;
+  border: 1px solid hsla(0deg, 0%, 100%, 0.5);
+  border-radius: 100px;
+  cursor: pointer;
+  position: relative;
+  z-index: 100;
+  background: url("../../images/mainpage/arrayRight.svg");
+}
+
+.button:hover {
+  background-image: linear-gradient(160deg, #44cbd4, #2881ef);
+}
+
+.hero {
+  margin: auto;
+  width: 450px;
+  height: 650px;
+  background-image: url("../../images/card/bigfon.png");
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: 4px solid white;
+  border-radius: 40px;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.21vw;
+  font-weight: 500;
+}
+
+.hero__container {
+  padding-left: 8%;
+  padding-right: 8%;
+  padding-top: 8%;
+  display: grid;
+  width: 82%;
+  height: 70%;
+  grid-template-rows: 100%;
+  grid-template-columns: 40% 60%;
+  column-gap: 5%;
+}
+
+.hero__container__container2 {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(12, 1fr);
+}
+
+.hero__container__container2 span {
+  font-family: "Playfair Display", serif;
+  font-weight: 100;
+}
+
+.hero__container__img {
+  width: 100%;
+}
+
+.hero__container__button {
+  margin-top: 20%;
+  margin-left: 70%;
+  width: 22%;
+  height: 5%;
+  background-color: #DE9E15;
+  border-width: 0;
+  border-radius: 12px;
+  color: white;
+  font-weight: 400;
+}
+
+.spell-card {
+  margin: auto;
+  width: 450px;
+  height: 270px;
+  background-image: url("../../images/card/smallfon.png");
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: 4px solid white;
+  border-radius: 30px;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.21vw;
+  font-weight: 500;
+}
+
+.spell-card__container {
+  padding-left: 8%;
+  padding-right: 8%;
+  padding-top: 3%;
+  display: grid;
+  width: 82%;
+  height: 70%;
+  grid-template-rows: 20% 80%;
+  grid-template-columns: 100%;
+}
+
+.spell-card__container__text2 {
+  font-family: "Playfair Display", serif;
+  font-size: 1.11vw;
+  font-weight: 100;
+  line-height: 150%;
+}
+
+.spell-card__container__button {
+  margin-left: 70%;
+  width: 22%;
+  height: 12%;
+  background-color: #DE9E15;
+  border-width: 0;
+  border-radius: 12px;
+  color: white;
+  font-weight: 400;
+}
+
 /*# sourceMappingURL=style.css.map */
