сделала слайдер спеллс

--- a/assets/styles/scss/blocks/galleryText_size.scss
+++ b/assets/styles/scss/blocks/galleryText_size.scss
@@ -5,21 +5,20 @@
     font-weight: 400;
     font-size: 25px;
     line-height: 33px;
-
-}
-
-
-.galleryText_sizeHover {
-
-    font-family: 'Playfair Display';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 33px;
+    transition: 0.2s;
 
 }
 
 .galleryText_size:hover {
     color: #DE9E15;
     text-decoration: none;
+    transform: scale(1.03);
+    font-family: 'Playfair Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 33px;
+    color: #DE9E15;
+    text-decoration: none;
+    transform: scale(1.03)
 }
