--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -4,6 +4,10 @@
   height: 20em;
 }
 
+.slider_spells .slick-track {
+  height: 5em;
+}
+
 .slick-list {
   overflow: hidden;
   margin: auto;
@@ -11,10 +15,17 @@
 
 .slider {
   position: relative;
+  padding: 0;
+  width: 70%;
+  margin: auto;
+}
+
+.slider_spells {
+  position: relative;
   padding: 0 8%;
 }
 
-.slider .slick-arrow {
+.slick-arrow {
   position: absolute;
   top: 32%;
   z-index: 10;
@@ -28,21 +39,21 @@
 }
 
 .slick-prev {
-  left: -1%;
+  left: -8%;
   background: url("../../images/mainpage/arrayRight.svg") 0 0/100% no-repeat;
 }
 
 .slick-prev:hover {
-  background: url("../../images/mainpage/arrayBlueL.svg");
+  background: url("../../images/mainpage/arrayBlueL.svg") no-repeat;
 }
 
 .slick-next {
-  right: -1%;
+  right: -8%;
   background: url("../../images/mainpage/arrayLeft.svg") 0 0/100% no-repeat;
 }
 
 .slick-next:hover {
-  background: url("../../images/mainpage/arrayBlueR.svg");
+  background: url("../../images/mainpage/arrayBlueR.svg") no-repeat;
 }
 
 .slider__item {
@@ -72,6 +83,35 @@
   background-color: #c4c4c4;
   padding: 0;
   margin: 3px;
+}
+
+.slider_margin {
+  width: 60%;
+  margin: 3em auto;
+}
+
+.slider__itemSpell {
+  height: 3em;
+  margin: 0;
+  padding: 0;
+}
+
+.slickSpells__elem {
+  text-align: center;
+}
+
+.slider__imgBox {
+  margin-top: 2em;
+  display: flex;
+  justify-content: center;
+}
+
+.btnSpells {
+  width: 40px;
+  height: 40px;
+  border: none;
+  align-self: center;
+  margin: auto;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -419,19 +459,21 @@ template {
   font-weight: 400;
   font-size: 25px;
   line-height: 33px;
-}
-
-.galleryText_sizeHover {
-  font-family: "Playfair Display";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 25px;
-  line-height: 33px;
+  transition: 0.2s;
 }
 
 .galleryText_size:hover {
   color: #DE9E15;
   text-decoration: none;
+  transform: scale(1.03);
+  font-family: "Playfair Display";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 33px;
+  color: #DE9E15;
+  text-decoration: none;
+  transform: scale(1.03);
 }
 
 .subtittle_size {
@@ -500,10 +542,11 @@ template {
 }
 
 .heroesBox {
-  height: 80vh;
-  padding: 7em;
+  height: 82vh;
+  margin-top: 0;
   box-sizing: border-box;
   background-image: url("../../images/mainpage/фон.png");
+  padding-top: 5em;
 }
 
 .heroesBox2 {
@@ -797,72 +840,30 @@ input:focus:-ms-input-placeholder {
 
 .spellsGallery {
   width: 100%;
-  height: 100%;
+  height: 85vh;
   background-image: url("../..//images/spells/fon.png");
   background-size: 100%;
   background-repeat: no-repeat;
 }
 
 .spellsGallery_wrapper {
-  padding-top: 9vh;
-  padding-left: 6vw;
-  padding-right: 6vw;
+  padding-top: 5.5vh;
   display: block;
   margin-bottom: 155px;
 }
 
-.h2 {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 600;
-  margin-bottom: 55px;
-}
-
-.spellsGallery_wrapper_cards {
-  display: flex;
-  align-items: center;
-}
-
-.spellCard_picture {
-  width: 100%;
-}
-
-.spellCard_picture:hover {
-  box-shadow: 1px 3px 7px 2px rgba(0, 0, 0, 0.5);
-}
-
-.spellCard {
-  margin-left: 7px;
-  margin-right: 7px;
-  display: grid;
-  justify-items: center;
-}
-
-.spells_icon_left {
-  margin-right: 55px;
-}
-
-.spells_icon_right {
-  margin-left: 55px;
-}
-
-.spellCard_text {
-  font-family: "Playfair Display";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 25px;
-  line-height: 33px;
-  margin-top: 17px;
-}
-
 a {
-  color: #000000; /* Цвет обычной ссылки */
-  text-decoration: none; /* Убираем подчёркивание у ссылок */
+  color: #000000;
+  /* Цвет обычной ссылки */
+  text-decoration: none;
+  /* Убираем подчёркивание у ссылок */
 }
 
 a:hover {
-  color: #DE9E15; /* Цвет ссылки при наведении */
-  text-decoration: none; /* Добавляем подчёркивание */
+  color: #DE9E15;
+  /* Цвет ссылки при наведении */
+  text-decoration: none;
+  /* Добавляем подчёркивание */
 }
 
 .padding {
