--- a/assets/styles/scss/blocks/heroesBox/heroesBox.scss
+++ b/assets/styles/scss/blocks/heroesBox/heroesBox.scss
@@ -4,9 +4,9 @@
 @import "./__card/imgHover.scss";
 
 .heroesBox {
-    height: 80vh;
-    padding: 7em;
+    height: 82vh;
+    margin-top: 0;
     box-sizing: border-box;
     background-image: url('../../images/mainpage/фон.png');
-
+    padding-top: 5em;
 }
