--- a/assets/styles/scss/blocks/spells/spells.scss
+++ b/assets/styles/scss/blocks/spells/spells.scss
@@ -2,14 +2,18 @@
   width: 100%;
   height: 85vh;
   background-image: url('../..//images/spells/fon.png');
+  background-attachment: scroll;
+  background-position: 3% 33%;
   background-size: 100%;
   background-repeat: no-repeat;
+  box-sizing: border-box;
+
+
 }
 
 .spellsGallery_wrapper {
-  padding-top: 5.5vh;
   display: block;
-  margin-bottom: 155px;
+
 }
 
 
