проверка на пустоту инпута и правка кнопки

--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -449,7 +449,7 @@ template {
 }
 
 .button_fontsize {
-  font-size: 1.97vw;
+  font-size: 1.7vw;
   font-weight: 400;
 }
 
@@ -614,8 +614,8 @@ template {
   background: #DE9E15;
   border-radius: 20px;
   color: white;
-  font-size: 26px;
   border: none;
+  font-family: "Roboto", sans-serif;
 }
 
 .comments__result {
@@ -673,7 +673,7 @@ template {
   width: 55vw;
   height: 100%;
   grid-template-columns: 100%;
-  grid-template-rows: 25% 12% 12% 10%;
+  grid-template-rows: 25% 12% 12% 10% 5%;
   align-items: center;
 }
 
@@ -743,6 +743,12 @@ input:focus:-ms-input-placeholder {
   color: white;
   font-size: 1.89vw;
   font-weight: 300;
+}
+
+.mainpage__container__text3 {
+  color: rgb(177, 176, 176);
+  font-size: 1vw;
+  font-weight: 100;
 }
 
 .mainpage {
