--- a/assets/styles/scss/blocks/comments/__button/__button.scss
+++ b/assets/styles/scss/blocks/comments/__button/__button.scss
@@ -4,6 +4,6 @@
     background: #DE9E15;
     border-radius: 20px;
     color: white;
-    font-size: 26px;
     border: none;
+    font-family: "Roboto", sans-serif;
 }
