--- a/assets/styles/scss/blocks/mainpage/__container/mainpage__container.scss
+++ b/assets/styles/scss/blocks/mainpage/__container/mainpage__container.scss
@@ -6,7 +6,7 @@
     width: 55vw;
     height: 100%;
     grid-template-columns: 100%;
-    grid-template-rows: 25% 12% 12% 10%;
+    grid-template-rows: 25% 12% 12% 10% 5%;
     align-items: center;
   }
   
