--- a/assets/styles/scss/blocks/mainpage/mainpage.scss
+++ b/assets/styles/scss/blocks/mainpage/mainpage.scss
@@ -4,7 +4,7 @@
 @import "./__container/__search/mainpage__container__search.scss";
 @import "./__container/__text1/mainpage__container__text1.scss";
 @import "./__container/__text2/mainpage__container__text2.scss";
-
+@import "./__container/__text3/mainpage__container__text3.scss";
 .mainpage {
   width: 100%;
   height: 100vh;
