--- a/assets/styles/scss/blocks/slick/slick.scss
+++ b/assets/styles/scss/blocks/slick/slick.scss
@@ -41,6 +41,19 @@
     -webkit-transition: all .25s ease-in-out;
 }
 
+.slider_spells .slick-arrow {
+    position: absolute;
+    top: 19%;
+    z-index: 10;
+    font-size: 0;
+    width: 40px;
+    height: 40px;
+    border: none;
+    transition: all .25s ease-in-out;
+    -moz-transition: all .25s ease-in-out;
+    -webkit-transition: all .25s ease-in-out;
+}
+
 
 .slick-prev {
     left: -8%;
@@ -49,6 +62,7 @@
 
 .slider_spells .slick-prev {
     left: 7%;
+
 }
 
 .slider_spells .slick-next {
@@ -84,6 +98,7 @@
 .slick-dots li[class="slick-active"] button {
     height: 12px;
     width: 12px;
+
 }
 
 .slick-dots li button {
@@ -100,32 +115,20 @@
 }
 
 .slider_margin {
-    width: 60%;
+    width: 40%;
     margin: 0 auto;
+
 
 }
 
 .slider__itemSpell {
     height: 3em;
-    margin: 0;
+    margin: 0 1%;
     padding: 0;
 
+
 }
 
-.slickSpells__elem {
-    text-align: center;
-}
-
-.slider__imgBox {
-    margin-top: 1em;
-    display: flex;
-    justify-content: center;
-}
-
-.btnSpells {
-    width: 40px;
-    height: 40px;
-    border: none;
-    align-self: center;
-    margin: auto;
+.slider_spells p {
+    color: #DE9E15;
 }
