--- a/assets/styles/scss/blocks/comments/__form/__form.scss
+++ b/assets/styles/scss/blocks/comments/__form/__form.scss
@@ -9,13 +9,13 @@
 }
 
 .form-name {
-    height: 76px;
+    height: 11.6vh;
     border-radius: 19px;
 }
 
 .form-comment {
     box-sizing: border-box;
-    height: 194px;
+    height: 29.7vh;
     border-radius: 29px;
     margin: 3rem 0;
     padding-bottom: 5em;
