--- a/assets/styles/scss/blocks/comments/__button/__button.scss
+++ b/assets/styles/scss/blocks/comments/__button/__button.scss
@@ -1,6 +1,6 @@
 .comments__button {
-    width: 210px;
-    height: 59px;
+    width: 15.9vw;
+    height: 9.04vh;
     background: #DE9E15;
     border-radius: 20px;
     color: white;
