--- a/assets/styles/scss/blocks/comments/commentsBox/commentsBox.scss
+++ b/assets/styles/scss/blocks/comments/commentsBox/commentsBox.scss
@@ -1,5 +1,5 @@
 @import "./__tittle/_tittle";
 .commentsBox {
     box-sizing: border-box;
-    padding: 5em 7em 0 7em;
+    padding: 4em 6vw 0 6vw;
 }
