--- a/assets/styles/scss/blocks/heroesBox/heroesBox.scss
+++ b/assets/styles/scss/blocks/heroesBox/heroesBox.scss
@@ -4,7 +4,7 @@
 @import "./__card/imgHover.scss";
 
 .heroesBox {
-    height: 80vh;
+    height: 36em;
     margin-top: 0;
     box-sizing: border-box;
     background-image: url('../../images/mainpage/фон.png');
