--- a/assets/styles/scss/blocks/slick/slick.scss
+++ b/assets/styles/scss/blocks/slick/slick.scss
@@ -109,7 +109,7 @@
     border-radius: 50%;
     background-color: transparent;
     border: none;
-    background-color: #c4c4c4;
+    background-color: #1e346d8f;
     padding: 0;
     margin: 3px;
 }
@@ -130,5 +130,5 @@
 }
 
 .slider_spells p {
-    color: #DE9E15;
+    color: #1e356d;
 }
