--- a/assets/styles/scss/blocks/form/form.scss
+++ b/assets/styles/scss/blocks/form/form.scss
@@ -114,6 +114,7 @@
     grid-template-columns: 1fr 1fr;
     width: 422px;
     justify-content: space-between;
+    font-family: 'Roboto';
 }
 
 .loginForm_Buttons,
@@ -121,6 +122,7 @@
     display: flex;
     justify-content: space-between;
     width: 422px;
+    font-family: 'Roboto';
 }
 
 .loginButton,
@@ -131,6 +133,7 @@
     padding: 0px;
     margin-top: 41px;
     color: #fff;
+    font-family: 'Roboto';
 }
 
 .signUpButton {
