--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1151,6 +1151,12 @@ a:hover {
   justify-content: flex-end;
 }
 
+.pasInfo {
+  height: 2vh;
+  color: white;
+  font-family: "Roboto";
+}
+
 .button {
   box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.3);
   display: inline-block;
