--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -569,7 +569,7 @@ template {
 
 .commentsBox {
   box-sizing: border-box;
-  padding: 4em 6vw 0 6vw;
+  padding: 4em 6vw 10vw 6vw;
 }
 
 .comments__block {
@@ -594,21 +594,21 @@ template {
 }
 
 .form-name {
-  height: 11.6vh;
+  height: 12vh;
   border-radius: 19px;
 }
 
 .form-comment {
   box-sizing: border-box;
-  height: 29.7vh;
+  height: 30vh;
   border-radius: 29px;
   margin: 3rem 0;
-  padding-bottom: 5em;
+  padding-bottom: 5.5em;
 }
 
 .comments__button {
   width: 15.9vw;
-  height: 9.04vh;
+  height: 10vh;
   background: #DE9E15;
   border-radius: 20px;
   color: white;
